// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poll toggle (flag) should match snapshot (default) 1`] = `
<button
  className="qa-toggle-flag"
  onClick={[Function]}
>
  <i
    className="fa fa-flag-o"
  />
</button>
`;

exports[`poll toggle (flag) should match snapshot (toggled) 1`] = `
<button
  className="qa-toggle-flag"
  onClick={[Function]}
>
  <i
    className="fa fa-flag"
  />
</button>
`;

exports[`poll toggle (hide) should match snapshot (default) 1`] = `
<button
  className="qa-toggle-hide"
  onClick={[Function]}
>
  <i
    className="fa fa-eye"
  />
</button>
`;

exports[`poll toggle (hide) should match snapshot (toggled) 1`] = `
<button
  className="qa-toggle-hide"
  onClick={[Function]}
>
  <i
    className="fa fa-eye-slash"
  />
</button>
`;
